Atualizações e funcionamento da rota de update de pets
